some hw progress

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
+    <div class="wrapper">
     <div class="container">
         <header>
             <h2>Elizabeth Adamczyk</h2>
-            <section id="header-links">
-                About
-                Portfolio
-                Contact
-            </section>
+            <nav class="header-links">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <div class="main-container">
@@ -31,6 +34,7 @@
             </section>
         </div>
     
+    </div>
     </div>
 </body>
 
