--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
 
     
             <h2>Contact</h2>
-            <div class="container">
-                    <form action="action_page.php">
+            <div class="form-container">
+                    <form action="#">
                   
                       <label for="name">Name</label>
                       <input type="text" id="name" name="name" placeholder="Your name.." required>
