updates to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EA basic portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style3.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -32,12 +32,22 @@
                     <section id="portfolio">
                         <h2>Portfolio</h2>
                     </section> 
-                    <section id="portfolio-images">
-                            <img id="hangman" src="assets/images/EA_bike_to_work.jpeg">
-                            <img id="rpg" src="assets/images/EA_bike_to_work.jpeg">
-                            <img id="trivia" src="assets/images/EA_bike_to_work.jpeg">
-                            <img id="rutgers" src="assets/images/EA_bike_to_work.jpeg">
-                            <img id="rock-paper-scissors" src="assets/images/EA_bike_to_work.jpeg">
+                    <section class="gallery-images">
+                            <figure class="gallery">
+                                <img id="box-1" src="assets/images/cats-1.jpg">
+                            </figure>
+                            <figure class="gallery">
+                                <img id="box-2" src="assets/images/cats-2.jpg">
+                            </figure>
+                            <figure class="gallery">
+                                <img id="box-3" src="assets/images/cats-3.jpg">
+                            </figure>
+                            <figure class="gallery">
+                                <img id="box-4" src="assets/images/cats-4.jpg">
+                            </figure>
+                            <figure class="gallery">
+                                <img id="box-5" src="assets/images/cats-5.jpg">
+                            </figure>
                             
                     </section> 
                 </div>
