portfolio final stages

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,15 @@
                     <section class="gallery-images">
                             <figure class="gallery">
                                 <img id="box-1" src="assets/images/cats-1.jpg">
+                                <div class="gallery-head">
+                                    <h3 id="gallery-1">Hangman</h3>
+                                </div>
                             </figure>
                             <figure class="gallery">
                                 <img id="box-2" src="assets/images/cats-2.jpg">
+                                <div class="gallery-head">
+                                    <h3 id="gallery-2">RPG Game</h3>
+                                </div>
                             </figure>
                             <figure class="gallery">
                                 <img id="box-3" src="assets/images/cats-3.jpg">
