--- a/portfolio2.html
+++ b/portfolio2.html
@@ -28,36 +28,27 @@
                         <h2>Portfolio</h2>
                     </section> 
                     <section class="gallery-images">
-                        <div class="gallery">
-                            <img id="box-1" src="assets/images/cats-1.jpg">
-                            <div class="gallery-head">
-                                <h3 id="gallery-1"><a href="#">Hangman</a></h3>
+                            <div id="box-1">
+                                <img src="assets/images/cats-1.jpg">
+                                <div class="gallery-head">
+                                    <h3><a hfref="#">Hangman</a></h3>
+                                </div>
                             </div>
-                            </div>
-                            <figure class="gallery">
+                            <!-- <figure class="gallery">
                                 <img id="box-2" src="assets/images/cats-2.jpg">
                                 <div class="gallery-head">
-                                    <h3 id="gallery-2"><a href="#">RPG Game</a></h3>
+                                    <h3 id="gallery-2">RPG Game</h3>
                                 </div>
                             </figure>
                             <figure class="gallery">
                                 <img id="box-3" src="assets/images/cats-3.jpg">
-                                <div class="gallery-head">
-                                    <h3 id="gallery-3"><a href="#">Trivia Game</a></h3>
-                                </div>
                             </figure>
                             <figure class="gallery">
                                 <img id="box-4" src="assets/images/cats-4.jpg">
-                                <div class="gallery-head">
-                                    <h3 id="gallery-4"><a href="#">Rutgers Info Widget</a></h3>
-                                </div>
                             </figure>
                             <figure class="gallery">
                                 <img id="box-5" src="assets/images/cats-5.jpg">
-                                <div class="gallery-head">
-                                    <h3 id="gallery-5"><a href="#">Rock Paper Scissors</a></h3>
-                                </div>
-                            </figure>
+                            </figure> -->
                             
                     </section> 
                 </div>
